...
        </TouchableOpacity>
      </View>
    );
  } else {
    content = (
      <FlatList
        testID="feed-list"
        key={`feed-${initialIndex}-${selectedCategoryIds.join(',')}`}
        ref={listRef}
        data={filteredFeedData}
        initialScrollIndex={initialIndex}
        renderItem={({ item }) => (
          <MantraCarousel
...
